--- a/xfwm4/repos/extra-i686/PKGBUILD
+++ b/xfwm4/repos/extra-i686/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=xfwm4
 pkgver=4.12.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Xfce window manager"
 arch=('i686' 'x86_64')
 url="http://www.xfce.org/"
@@ -13,8 +13,17 @@ groups=('xfce4')
 depends=('libxfce4ui' 'libwnck' 'libdrm' 'hicolor-icon-theme')
 makedepends=('intltool')
 install=$pkgname.install
-source=(http://archive.xfce.org/src/xfce/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
-sha256sums=('4e9b94517cc1550c4ff4ff8ac252c95ef0d3345b1f5f04dbf2ca9e3c708de1bb')
+source=(http://archive.xfce.org/src/xfce/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2
+        0001-Fix-a-mishmash-between-width-and-height.patch)
+sha256sums=('4e9b94517cc1550c4ff4ff8ac252c95ef0d3345b1f5f04dbf2ca9e3c708de1bb'
+            '79c7d1b494f56f9a2d5da1ceb9cdad8014f6d45547b972326fe2d2d74b6970ae')
+
+prepare() {
+  cd "$srcdir/$pkgname-$pkgver"
+
+  # https://bugzilla.xfce.org/show_bug.cgi?id=11700
+  patch -Np1 -i ../0001-Fix-a-mishmash-between-width-and-height.patch
+}
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
