--- a/kdeedu-marble/repos/kde-unstable-i686/PKGBUILD
+++ b/kdeedu-marble/repos/kde-unstable-i686/PKGBUILD
@@ -2,24 +2,20 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
-pkgname=kdeedu-marble
+pkgbase=kdeedu-marble
+pkgname=('kdeedu-marble' 'marble-qt')
 pkgver=15.03.90
-pkgrel=1
+pkgrel=2
 pkgdesc="Desktop Globe"
 url="http://kde.org/applications/education/marble/"
 arch=('i686' 'x86_64')
 license=('GPL' 'LGPL' 'FDL')
-groups=('kde' 'kdeedu')
-depends=('kdebase-runtime')
-makedepends=('cmake' 'automoc4' 'gpsd')
-optdepends=('gpsd: GPS support'
-            'quazip: reading and displaying KMZ files')
-install=${pkgname}.install
+makedepends=('kdelibs' 'qt5-svg' 'qt5-webkit' 'qt5-script' 'qt5-tools' 'cmake' 'automoc4' 'gpsd')
 source=("http://download.kde.org/unstable/applications/${pkgver}/src/marble-${pkgver}.tar.xz")
 sha1sums=('6199ef73c3404812e4a8496496db9ea6033f5399')
 
 prepare() {
-  mkdir build
+  mkdir -p build{,-qt}
 }
 
 build() {
@@ -29,9 +25,39 @@ build() {
     -DKDE4_BUILD_TESTS=OFF \
     -DCMAKE_INSTALL_PREFIX=/usr
   make
+
+  cd ../build-qt
+  cmake ../marble-${pkgver} \
+    -DCMAKE_BUILD_TYPE=Release \
+    -DQT5BUILD=TRUE \
+    -DCMAKE_INSTALL_PREFIX=/usr
 }
 
-package() {
+package_kdeedu-marble() {
+  depends=('kdebase-runtime')
+  optdepends=('gpsd: GPS support'
+            'quazip: reading and displaying KMZ files')
+  groups=('kde' 'kdeedu')
+  install=$pkgname.install
+            
   cd build
   make DESTDIR="${pkgdir}" install
+# remove mobile and qt4 versions
+  rm -r "$pkgdir"/usr/bin/marble-*
+  rm -r "$pkgdir"/usr/share/applications/kde4/marble-*
+}
+
+package_marble-qt() {
+  pkgdesc="Desktop Globe (Qt version)"
+  depends=('qt5-svg' 'qt5-webkit' 'qt5-script')
+  optdepends=('gpsd: GPS support'
+          'quazip: reading and displaying KMZ files')
+  conflicts=('kdeedu-marble')
+  install=$pkgname.install  
+
+  cd build-qt
+  make DESTDIR="${pkgdir}" install
+# remove mobile version
+  rm -r "$pkgdir"/usr/bin/marble-{mobile,touch}
+  rm -r "$pkgdir"/usr/share/applications/marble-{mobile,touch}.desktop
 }
