--- a/calligra-l10n/trunk/PKGBUILD
+++ b/calligra-l10n/trunk/PKGBUILD
@@ -3,36 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgbase=calligra-l10n
-pkgname=('calligra-l10n-bs'
-   'calligra-l10n-ca'
-   'calligra-l10n-ca@valencia'
-   'calligra-l10n-cs'
-   'calligra-l10n-da'
-   'calligra-l10n-de'
-   'calligra-l10n-el'
-   'calligra-l10n-en_gb'
-   'calligra-l10n-es'
-   'calligra-l10n-et'
-   'calligra-l10n-fi'
-   'calligra-l10n-fr'
-   'calligra-l10n-gl'
-   'calligra-l10n-hu'
-   'calligra-l10n-it'
-   'calligra-l10n-ja'
-   'calligra-l10n-kk'
-   'calligra-l10n-nb'
-   'calligra-l10n-nl'
-   'calligra-l10n-pl'
-   'calligra-l10n-pt'
-   'calligra-l10n-pt_br'
-   'calligra-l10n-ru'
-   'calligra-l10n-sk'
-   'calligra-l10n-sv'
-   'calligra-l10n-tr'
-   'calligra-l10n-uk'
-   'calligra-l10n-zh_cn'
-   'calligra-l10n-zh_tw')
-pkgver=2.9.0
+pkgver=2.9.1
 pkgrel=1
 pkgdesc="Localization for Calligra"
 arch=('any')
@@ -40,71 +11,90 @@ url='http://www.calligra-suite.org/'
 license=('LGPL')
 makedepends=('cmake' 'automoc4' 'kdelibs')
 options=('docs')
-source=("http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-bs-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-ca-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-ca@valencia-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-cs-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-da-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-de-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-el-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-en_GB-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-es-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-et-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-fi-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-fr-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-gl-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-hu-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-it-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-ja-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-kk-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-nb-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-nl-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-pl-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-pt-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-pt_BR-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-ru-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-sk-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-sv-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-tr-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-uk-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-zh_CN-${pkgver}.tar.xz"
-  "http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-zh_TW-${pkgver}.tar.xz")
-md5sums=('8c5bd1835ce57c6c78befad6fe7fb855'
-         'e4e24f20a7bf0ecc038f4ba7392bcdc0'
-         'af9c4ed7f06689e2166fa30c22f93027'
-         'd47f782ade639791b44a5dbd5f3fad42'
-         '0a113fb12c35df2723f6399f401e7b97'
-         '98cea4fbe71b503d241792707fc54adf'
-         '50093946ae7838df0cef810d5b3ef851'
-         'd76c0261f003889659068e1b31b9ce82'
-         'feee9e3d9196481e316365d8b91fc981'
-         '9d2127e6828d561310b1ea2080955074'
-         'a1cfcfb48adf532223c00d8277e914d6'
-         '1357d9d620c6a70e69937c843e99d4b8'
-         '53260957880666794cd384be04bb73d3'
-         '4390d3af0d141f0d0621a2f0d732ac71'
-         'ebcc25709d27fca6d0cf4e79711e360f'
-         '94b4380e385134e816019862b6e8db37'
-         'c52043127faf5f6c98b4ed9dec417da1'
-         '0418789bc27c2c18a8292bcfbaaccbdd'
-         'a80c21e2eb73aebf8da032ee55bb7331'
-         '4344da1de1a6eb4f5deed2891ded8e85'
-         'ba73bc0c2efcaac20276e11ccb3dc43b'
-         '2249f929ffe2166d38dfacddf8f2176b'
-         '7d21a5e68e7da704491253c61ef27616'
-         'ab46b1def7a9425ec3e5d49d6a66113f'
-         '28620fc585d63b8b897ae71d8e29fbda'
-         '5d6f8793ca8f7b870927e5dc85307970'
-         '143959752de38f2ab69a8a8fe1cc5fab'
-         '9f746f3db36c40ded63b95e9f9fe43f9'
-         '7b08d95c2f16e8ad8be3480d80ce1d8d')
+
+_languages=(
+  'bs     "Bosnian"'
+  'ca     "Catalan"'
+  'ca@valencia     "Catalan (Valencian)"'
+  'cs     "Czech"'
+  'da     "Danish"'
+  'de     "German"'
+  'el     "Greek"'
+  'en_GB  "British English"'
+  'es     "Spanish"'
+  'et     "Estonian"'
+  'fi     "Finnish"'
+  'fr     "French"'
+  'gl     "Galician"'
+  'hu     "Hungarian"'
+  'it     "Italian"'
+  'ja     "Japanese"'
+  'kk     "Kazakh"'
+  'nb     "Norwegian Bokmal"'
+  'nl     "Dutch"'
+  'pl     "Polish"'
+  'pt     "Portuguese"'
+  'pt_BR  "Brazilian Portuguese"'
+  'ru     "Russian"'
+  'sk     "Slovak"'
+  'sv     "Swedish"'
+  'tr     "Turkish"'
+  'uk     "Ukrainian"'
+  'zh_CN  "Chinese Simplified"'
+  'zh_TW  "Chinese Traditional"'
+)
+
+pkgname=()
+source=()
+
+for _lang in "${_languages[@]}"; do
+  _locale=${_lang%% *}
+  _pkgname=calligra-l10n-${_locale,,}
+  
+  pkgname+=($_pkgname)
+  source+=("http://download.kde.org/stable/calligra-${pkgver}/${pkgbase}/${pkgbase}-$_locale-${pkgver}.tar.xz")
+  eval "package_$_pkgname() {
+    _package $_lang
+  }"
+done
+
+md5sums=('cba77be979019517c35aeb1411061f74'
+         'd2a492476166abe353b722d3be83f484'
+         '86174201d1a67ee486699e39e792afe5'
+         'ed4fe0690d0f55776564066c469aff31'
+         '2e1aa8454f058d60d6de027bf9e6013e'
+         '462bdf3a1c357162947a2ac78193c0c8'
+         '686701808bb98526e93a3122d8a72211'
+         'f72642f72021426bd366d2b82703fe92'
+         '23e37fd33625b3cb65864c86044cc307'
+         '0b2f118ccb93256750e93da95af9922c'
+         '9e2537324e6b896c9f174289d44d2401'
+         '333d06893bf797ae2f15374950431379'
+         '2f5092542e13c984a07fa06a13071de5'
+         '6f74a2430e93a8212b52ea4a7f3db80c'
+         '6cc374e9019fb4c2f4096ab167c31787'
+         'cd144c35a06e68c7800235f82a34117b'
+         'adf1689fb17cbe2bee3f00c8de68d26b'
+         '0747c067bbb212f1c5011e2b21ff3fff'
+         'b2c3a57f77fd2d07b51bdddc5390a81f'
+         'd94a51ff6dda4cbfe957d192775a738e'
+         '68627ac4b6594297baee20c1ae1a6313'
+         '7f93061b116d0e3bb8a42230d721f52b'
+         '790ea91505d5754564651a9797ad5b27'
+         '2fb7ac4e427fb4f94b7a2f03b0df59db'
+         '462715b91ff71b696f6c592e2879b453'
+         '732a10099b75a3068646afcb154bdeee'
+         'f085a670997dbc599dae1bd18ecfb6f3'
+         '35061f847c9df4a7d618dc2bfbd5e3d2'
+         '653556c54ee517d685bfdd274610d00f')
 
 build() {
-  for lang in bs ca ca@valencia cs da de el en_GB es et fi fr gl hu it ja kk nb \
-    nl pl pt pt_BR ru sk sv tr uk zh_CN zh_TW; do
-    mkdir -p build/$lang
-    cd build/$lang
-    cmake ${srcdir}/${pkgbase}-$lang-${pkgver} \
+  for _lang in "${_languages[@]}"; do
+    _locale=${_lang%% *}
+    
+    mkdir -p build/$_locale
+    cd build/$_locale
+    cmake $srcdir/$pkgbase-$_locale-$pkgver \
       -DCMAKE_BUILD_TYPE=Release \
       -DCMAKE_INSTALL_PREFIX=/usr
     make
@@ -112,205 +102,8 @@ build() {
   done
 }
 
-package_calligra-l10n-bs() {
-  pkgdesc=('Bosnian Localization for Calligra')
-  replaces=('koffice-l10n-bs')
-  cd "${srcdir}"/build/bs
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-ca() {
-  pkgdesc=('Catalan Localization for Calligra')
-  replaces=('koffice-l10n-ca')
-  cd "${srcdir}"/build/ca
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-ca@valencia() {
-  pkgdesc=('Catalan (Valencia) Localization for Calligra')
-  replaces=('koffice-l10n-ca@valencia')
-  cd "${srcdir}"/build/ca@valencia
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-cs() {
-  pkgdesc=('Czech Localization for Calligra')
-  replaces=('koffice-l10n-cs')
-  cd "${srcdir}"/build/cs
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-da() {
-  pkgdesc=('Danish Localization for Calligra')
-  replaces=('koffice-l10n-da')
-  cd "${srcdir}"/build/da
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-de() {
-  pkgdesc=('German Localization for Calligra')
-  replaces=('koffice-l10n-de')
-  cd "${srcdir}"/build/de
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-el() {
-  pkgdesc=('Greek Localization for Calligra')
-  replaces=('koffice-l10n-el')
-  cd "${srcdir}"/build/el
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-en_gb () {
-  pkgdesc=('British Localization for Calligra')
-  replaces=('koffice-l10n-en_gb')
-  cd "${srcdir}"/build/en_GB
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-es() {
-  pkgdesc=('Spanish Localization for Calligra')
-  replaces=('koffice-l10n-es')
-  cd "${srcdir}"/build/es
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-et() {
-  pkgdesc=('Estonian Localization for Calligra')
-  replaces=('koffice-l10n-et')
-  cd "${srcdir}"/build/et
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-fi() {
-  pkgdesc=('Finnish Localization for Calligra')
-  replaces=('koffice-l10n-fi')
-  cd "${srcdir}"/build/fi
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-fr() {
-  pkgdesc=('French Localization for Calligra')
-  replaces=('koffice-l10n-fr')
-  cd "${srcdir}"/build/fr
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-gl() {
-  pkgdesc=('Galician Localization for Calligra')
-  replaces=('koffice-l10n-gl')
-  cd "${srcdir}"/build/gl
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-hu() {
-  pkgdesc=('Hungarian Localization for Calligra')
-  replaces=('koffice-l10n-hu')
-  cd "${srcdir}"/build/hu
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-it() {
-  pkgdesc=('Italian Localization for Calligra')
-  replaces=('koffice-l10n-it')
-  cd "${srcdir}"/build/it
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-ja() {
-  pkgdesc=('Japanese Localization for Calligra')
-  replaces=('koffice-l10n-ja')
-  cd "${srcdir}"/build/ja
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-kk() {
-  pkgdesc=('Kazakh Localization for Calligra')
-  replaces=('koffice-l10n-kk')
-  cd "${srcdir}"/build/kk
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-nb() {
-  pkgdesc=('Norwegian Bookmal Localization for Calligra')
-  replaces=('koffice-l10n-nb')
-  cd "${srcdir}"/build/nb
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-nl() {
-  pkgdesc=('Dutch Localization for Calligra')
-  replaces=('koffice-l10n-nl')
-  cd "${srcdir}"/build/nl
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-pl() {
-  pkgdesc=('Polish Localization for Calligra')
-  replaces=('koffice-l10n-pl')
-  cd "${srcdir}"/build/pl
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-pt() {
-  pkgdesc=('Portugese Localization for Calligra')
-  replaces=('koffice-l10n-pt')
-  cd "${srcdir}"/build/pt
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-pt_br() {
-  pkgdesc=('Brazilian Portugese Localization for Calligra')
-  replaces=('koffice-l10n-pt_br')
-  cd "${srcdir}"/build/pt_BR
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-ru() {
-  pkgdesc=('Russian Localization for Calligra')
-  replaces=('koffice-l10n-ru')
-  cd "${srcdir}"/build/ru
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-sk() {
-  pkgdesc=('Slovak Localization for Calligra')
-  replaces=('koffice-l10n-sk')
-  cd "${srcdir}"/build/sk
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-sv() {
-  pkgdesc=('Swedish Localization for Calligra')
-  replaces=('koffice-l10n-sv')
-  cd "${srcdir}"/build/sv
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-tr() {
-  pkgdesc=('Turkish Localization for Calligra')
-  replaces=('koffice-l10n-tr')
-  cd "${srcdir}"/build/tr
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-uk() {
-  pkgdesc=('Ukrainian Localization for Calligra')
-  replaces=('koffice-l10n-uk')
-  cd "${srcdir}"/build/uk
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-zh_cn() {
-  pkgdesc=('Simplified Chinese Localization for Calligra')
-  replaces=('koffice-l10n-zh_cn')
-  cd "${srcdir}"/build/zh_CN
-  make DESTDIR="${pkgdir}" install
-}
-
-package_calligra-l10n-zh_tw() {
-  pkgdesc=('Traditional Chinese Localization for Calligra')
-  replaces=('koffice-l10n-zh_tw')
-  cd "${srcdir}"/build/zh_TW
-  make DESTDIR="${pkgdir}" install
+_package() {
+  pkgdesc="$2 localization for Calligra"
+  cd build/$1
+  make DESTDIR="$pkgdir" install
 }
